--- a/src/components/class/ClassComment.css
+++ b/src/components/class/ClassComment.css
@@ -27,10 +27,10 @@
     margin-top: 20px;
 }
 
-.content {
+/* .content {
     display: inline-block;
     height: 250px;
-}
+} */
 
 .extra-content {
     /* display: inline-block; */
